Correct vertical alignment of social share numbers

--- a/static/src/stylesheets/module/content-garnett/_gallery.head.scss
+++ b/static/src/stylesheets/module/content-garnett/_gallery.head.scss
@@ -162,7 +162,6 @@
 
     .meta__numbers {
         float: right;
-        padding-top: $gs-baseline/2;
 
         .sharecount__value,
         a {
